--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,10 +1,10 @@
-FROM node:20-alpine
+FROM node:20-alpine AS builder
 
 WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm install
+RUN npm ci
 
 COPY . .
 
@@ -13,5 +13,11 @@ ENV VITE_API_URL=$VITE_API_URL
 
 RUN npm run build
 
-EXPOSE 5173
-CMD [ "npm", "run", "preview" ]
+
+FROM nginx:stable-alpine
+
+COPY --from=builder /app/dist /usr/share/nginx/html
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
