--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,42 @@
-# Two services: backend API on 5000, frontend (nginx) on 80
+version: '3.8'
 services:
-  backend:
-    build: ./server
-    container_name: backend
-    restart: always
-    env_file:
-      - ./server/.env        
+  mongo:
+    image: mongo:6
+    restart: unless-stopped
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+
+  server:
+    build:
+      context: ./server
+    working_dir: /app
+    volumes:
+      - ./server:/app
+    environment:
+      - MONGO_URI=mongodb://mongo:27017/dev_db
+      - PORT=5000
     ports:
       - "5000:5000"
+    depends_on:
+      - mongo
+    command: npm run dev
 
-  frontend:
+  client:
     build:
       context: ./client
       args:
-        VITE_API_URL: http://3.26.242.54:5000/api
-    container_name: frontend
-    restart: always
+        VITE_API_URL: http://server:5000/api
     ports:
       - "5173:5173"
     depends_on:
-      - backend
+      - server
+
+volumes:
+  mongo-data:
+
+networks:
+  default:
+    external:
+      name: my-custom-network
