--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -1,1 +1,7 @@
- { "semi": true, "singleQuote": true, "printWidth": 100 }
+{
+  "printWidth": 100,
+  "singleQuote": true,
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "semi": true
+}
