--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,45 +1,26 @@
-name: build-and-lint
+name: Lint Check
 
-# triggers: define when this workflow should run
-# trigger on push to these branches
 on:
-  push:
-    branches: [main, dev]
   pull_request:
-    branches: [main, dev]
+  push:
+    branches: [ main, develop ]
 
-    # define a job (multiple jobs also)
 jobs:
-  build-and-lint:
+  eslint:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: '18'
+          cache: 'npm'
 
-      - name: Install backend dependencies
-        working-directory: server
-        run: npm ci
+      - name: Install dependencies
+        run: npm install
 
-      - name: Lint backend
-        working-directory: server
-        run: npm run lint -- --max-warnings=0
-
-      - name: Install frontend dependencies
-        working-directory: client
-        run: npm ci
-
-      - name: Lint frontend
-        working-directory: client
-        run: npm run lint -- --max-warnings=0
-
-      - name: Build backend image
-        run: docker build -t backend ./server
-
-      - name: Build frontend image
-        run: docker build -t frontend ./client
+      - name: Run ESLint
+        run: npx eslint . --ext .js,.ts,.jsx,.tsx
