--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,13 @@
+name: Lint Check
+
+on:
+  pull_request:
+  push:
+    branches: [ main, develop ]
+
 jobs:
   eslint:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./server  # 👈 run everything inside /server
 
     steps:
       - name: Checkout repository
@@ -14,10 +18,9 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: 'server/package-lock.json'  # 👈 adjust
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Run ESLint
         run: npx eslint . --ext .js,.ts,.jsx,.tsx
