--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,16 @@
-name: Lint Check
+name: ESLint Check
 
 on:
-  pull_request:
   push:
     branches: [ main, develop ]
+  pull_request:
 
 jobs:
   eslint:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./server  # 👈 everything runs inside server/
 
     steps:
       - name: Checkout repository
@@ -18,9 +21,10 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
+          cache-dependency-path: server/package-lock.json  # 👈 point here
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Run ESLint
         run: npx eslint . --ext .js,.ts,.jsx,.tsx
